fixing mobile overflow

--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -2,6 +2,7 @@
 	width:  100%; 
 	max-height:  72px; 
 	overflow:  hidden; 
+	box-sizing:  border-box; 
 }
 .header {
 	display:  flex; 
@@ -56,7 +57,8 @@
 @media screen and (max-width:  1023px) {
 	.header__logo {
 		width:  auto; 
-		height:  44px;
+		max-width:  50%;
+		height:  auto;
 	}
 }
 .exchange-rate, 
