--- a/app/assets/stylesheets/components/navigation.scss
+++ b/app/assets/stylesheets/components/navigation.scss
@@ -3,6 +3,7 @@
 	height:  155px; 
 	display:  block;
 	overflow:  hidden;  
+	box-sizing:  border-box; 
 }
 .navigation {
 	position:  fixed; 
@@ -13,6 +14,7 @@
 	align-items:  center; 
 	z-index:  100; 
 	overflow:  hidden; 
+	box-sizing:  border-box; 
 }
 @media screen and (max-width:  1023px) {
 	.top-padder { height:  132px }
